package edu.hitsz.application;

import edu.hitsz.aircraft.*;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.factory.*;
import edu.hitsz.observer.PropObserver;
import edu.hitsz.prop.*;
import edu.hitsz.strategy.CircleShootStrategy;
import edu.hitsz.strategy.DirectShootStrategy;
import edu.hitsz.strategy.ShootStrategy;
import edu.hitsz.strategy.SpreadShootStrategy;

import javax.swing.*;
import java.awt.*;
import java.awt.image.BufferedImage;
import java.util.*;
import java.util.List;
import java.util.Timer;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicInteger;

/**
 * 游戏主面板，游戏启动
 * @author hitsz
 */
public abstract class Game extends JPanel {

    private int backGroundTop = 0;

    //调度器, 用于定时任务调度
    private final Timer timer;
    //时间间隔(ms)，控制刷新频率
    protected final int timeInterval = 40;

    protected final HeroAircraft heroAircraft;
    protected final List<AbstractAircraft> enemyAircrafts;
    protected final List<BaseBullet> heroBullets;
    protected final List<BaseBullet> enemyBullets;
    protected final List<AbstractProp> props;
    protected final Difficulty difficulty;
    private final BufferedImage backgroundImage;
    protected final AudioManager audioManager = new AudioManager();
    private final AtomicInteger fireEffectVersion = new AtomicInteger(0);

    //敌机工厂实例（工厂方法模式）
    protected final EnemyFactory mobEnemyFactory = new MobEnemyFactory();
    protected final EnemyFactory eliteEnemyFactory = new EliteEnemyFactory();
    protected final EnemyFactory elitePlusEnemyFactory = new ElitePlusEnemyFactory();
    protected final EnemyFactory eliteProEnemyFactory = new EliteProEnemyFactory();
    protected final EnemyFactory bossEnemyFactory = new BossEnemyFactory();

    //屏幕中出现的敌机最大数量
    protected int enemyMaxNumber = 5;

    //敌机生成周期（每隔固定周期随机产生一种敌机）
    protected double enemySpawnCycle = 20;
    private int enemySpawnCounter = 0;

    //Boss敌机生成：由分数阈值触发
    protected int bossScoreThreshold = 500;
    private int lastBossScore = 0;
    //道具生成概率（精英敌机坠毁时）
    private final double propDropProbability = 0.3;

    //英雄机和敌机射击周期
    protected double heroShootCycle = 20;
    protected double enemyShootCycle = 20;
    private int heroShootCounter = 0;
    private int enemyShootCounter = 0;

    //游戏主循环帧数，用于难度递进钩子
    private int actionTick = 0;

    //当前玩家分数
    private int score = 0;

    //游戏结束标志
    private boolean gameOverFlag = false;

    protected Game(Difficulty difficulty) {
        this.difficulty = difficulty;
        this.backgroundImage = ImageManager.getBackground(difficulty);
        heroAircraft = HeroAircraft.getInstance(
                Main.WINDOW_WIDTH / 2,
                Main.WINDOW_HEIGHT - ImageManager.HERO_IMAGE.getHeight() ,
                0, 0, 100);

        enemyAircrafts = new CopyOnWriteArrayList<>();
        heroBullets = new CopyOnWriteArrayList<>();
        enemyBullets = new CopyOnWriteArrayList<>();
        props = new CopyOnWriteArrayList<>();

        //启动英雄机鼠标监听
        new HeroController(this, heroAircraft);

        this.timer = new Timer("game-action-timer", true);

    }

    /**
     * 游戏启动入口，执行游戏逻辑
     */
    public final void action() {
        audioManager.startBackgroundMusic();

        // 定时任务：绘制、对象产生、碰撞判定、及结束判定
        TimerTask task = new TimerTask() {
            @Override
            public void run() {

                actionTick++;

                // 可变步骤由不同难度子类定制
                spawnEnemyAction();
                spawnBossAction();
                increaseDifficultyAction();

                // 飞机发射子弹
                shootAction();
                // 子弹移动
                bulletsMoveAction();
                // 飞机移动
                aircraftsMoveAction();
                // 道具移动
                propsMoveAction();
                // 撞击检测
                crashCheckAction();
                // 后处理
                postProcessAction();
                // 重绘界面
                repaint();
                // 游戏结束检查
                checkResultAction();
            }
        };
        // 以固定延迟时间进行执行：本次任务执行完成后，延迟 timeInterval 再执行下一次
        timer.schedule(task,0,timeInterval);

    }

    //***********************
    //      Action 各部分
    //***********************

    protected void spawnEnemyAction() {
        enemySpawnCounter++;

        // 每隔固定周期，随机产生一种敌机（Boss除外），且只生成一架
        if (enemySpawnCounter >= enemySpawnCycle) {
            enemySpawnCounter = 0;
            if (enemyAircrafts.size() < enemyMaxNumber) {
                AbstractEnemy enemy = createEnemyByProbability();
                adjustEnemyByDifficulty(enemy);
                enemyAircrafts.add(enemy);
            }
        }
    }

    protected AbstractEnemy createEnemyByProbability() {
        double rand = Math.random();
        EnemyFactory factory = selectEnemyFactory(rand);
        return factory.createEnemy();
    }

    protected EnemyFactory selectEnemyFactory(double rand) {
        if (rand < 0.4) {
            return mobEnemyFactory;
        } else if (rand < 0.65) {
            return eliteEnemyFactory;
        } else if (rand < 0.85) {
            return elitePlusEnemyFactory;
        }
        return eliteProEnemyFactory;
    }

    protected void adjustEnemyByDifficulty(AbstractEnemy enemy) {
        // 默认难度不额外调整，子类按需覆盖。
    }

    protected void spawnBossAction() {
        if (!canSpawnBoss()) {
            return;
        }
        // Boss敌机：玩家分数达到阈值时触发生成
        if (score - lastBossScore >= bossScoreThreshold) {
            lastBossScore += bossScoreThreshold;
            enemyAircrafts.add(createBossEnemy());
            audioManager.startBossMusic();
        }
    }

    protected boolean canSpawnBoss() {
        return true;
    }

    protected AbstractEnemy createBossEnemy() {
        return bossEnemyFactory.createEnemy();
    }

    protected void increaseDifficultyAction() {
        // 默认难度不随时间递进，子类按需覆盖。
    }

    protected int getActionTick() {
        return actionTick;
    }

    private void shootAction() {
        heroShootCounter++;
        enemyShootCounter++;
        if (heroShootCounter >= heroShootCycle) {
            heroShootCounter = 0;
            heroBullets.addAll(heroAircraft.shoot());
        }

        if (enemyShootCounter >= enemyShootCycle) {
            enemyShootCounter = 0;
            for (AbstractAircraft enemy : enemyAircrafts) {
                enemyBullets.addAll(enemy.shoot());
            }
        }
    }

    private void bulletsMoveAction() {
        for (BaseBullet bullet : heroBullets) {
            bullet.forward();
        }
        for (BaseBullet bullet : enemyBullets) {
            bullet.forward();
        }
    }

    private void aircraftsMoveAction() {
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            enemyAircraft.forward();
        }
    }

    private void propsMoveAction() {
        for (AbstractProp prop : props) {
            prop.forward();
        }
    }


    /**
     * 碰撞检测：
     * 1. 敌机攻击英雄
     * 2. 英雄攻击/撞击敌机
     * 3. 英雄获得补给
     */
    private void crashCheckAction() {
        // 敌机子弹攻击英雄机
        for (BaseBullet bullet : enemyBullets) {
            if (bullet.notValid()) {
                continue;
            }
            if (bullet.crash(heroAircraft) || heroAircraft.crash(bullet)) {
                // 英雄机被敌机子弹击中
                heroAircraft.decreaseHp(bullet.getPower());
                bullet.vanish();
                System.out.println("英雄机被击中！当前生命值：" + heroAircraft.getHp());
            }
        }

        // 英雄子弹攻击敌机
        for (BaseBullet bullet : heroBullets) {
            if (bullet.notValid()) {
                continue;
            }
            for (AbstractAircraft enemyAircraft : enemyAircrafts) {
                if (enemyAircraft.notValid()) {
                    // 已被其他子弹击毁的敌机，不再检测
                    // 避免多个子弹重复击毁同一敌机的判定
                    continue;
                }
                if (enemyAircraft.crash(bullet)) {
                    audioManager.playBulletHit();
                    // 敌机撞击到英雄机子弹
                    // 敌机损失一定生命值
                    enemyAircraft.decreaseHp(bullet.getPower());
                    bullet.vanish();
                    if (enemyAircraft.notValid()) {
                        // 使用AbstractEnemy的getScore()统一获取分数
                        if (enemyAircraft instanceof AbstractEnemy) {
                            score += ((AbstractEnemy) enemyAircraft).getScore();
                        }

                        // 道具掉落逻辑：不同敌机有不同的掉落概率和道具范围
                        if (enemyAircraft instanceof EliteEnemy) {
                            // 精英敌机：30%概率掉落道具（加血、火力、超级火力）
                            if (Math.random() < propDropProbability) {
                                generateProp(enemyAircraft);
                            }
                        } else if (enemyAircraft instanceof ElitePlusEnemy) {
                            // 精锐敌机：50%概率掉落道具（4种，不含冰冻）
                            if (Math.random() < 0.5) {
                                generateProp(enemyAircraft);
                            }
                        } else if (enemyAircraft instanceof EliteProEnemy) {
                            // 王牌敌机：70%概率掉落道具（全部5种）
                            if (Math.random() < 0.7) {
                                generateProp(enemyAircraft);
                            }
                        } else if (enemyAircraft instanceof BossEnemy) {
                            // Boss敌机：必定掉落3个道具
                            for (int i = 0; i < 3; i++) {
                                generateProp(enemyAircraft);
                            }
                            audioManager.stopBossMusic();
                        }
                        // 普通敌机不掉落道具
                    }
                }
                // 英雄机 与 敌机 相撞，均损毁
                if (enemyAircraft.crash(heroAircraft) || heroAircraft.crash(enemyAircraft)) {
                    if (enemyAircraft.notValid()) {
                        continue; // 跳过已销毁的敌机
                    }
                    enemyAircraft.vanish();
                    heroAircraft.decreaseHp(heroAircraft.getHp()); // 设置为当前生命值，确保归零但不溢出
                }
            }
        }

        // 英雄机获得道具，道具生效
        for (AbstractProp prop : props) {
            if (prop.notValid()) {
                continue;
            }
            if (prop.crash(heroAircraft) || heroAircraft.crash(prop)) {
                // 英雄机拾取道具
                List<AbstractEnemy> enemiesBeforeProp = collectCurrentValidEnemies();
                registerPropObservers(prop);
                prop.activate();
                audioManager.playGetSupply();
                collectBombScore(prop, enemiesBeforeProp);
                applyPropEffect(prop);
                prop.vanish();
            }
        }

    }

    private List<AbstractEnemy> collectCurrentValidEnemies() {
        List<AbstractEnemy> validEnemies = new ArrayList<>();
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (enemyAircraft instanceof AbstractEnemy && !enemyAircraft.notValid()) {
                validEnemies.add((AbstractEnemy) enemyAircraft);
            }
        }
        return validEnemies;
    }

    private void registerPropObservers(AbstractProp prop) {
        for (AbstractAircraft enemyAircraft : enemyAircrafts) {
            if (enemyAircraft instanceof PropObserver) {
                prop.addObserver((PropObserver) enemyAircraft);
            }
        }
        for (BaseBullet bullet : enemyBullets) {
            if (bullet instanceof PropObserver) {
                prop.addObserver((PropObserver) bullet);
            }
        }
    }

    private void collectBombScore(AbstractProp prop, List<AbstractEnemy> enemiesBeforeProp) {
        if (!(prop instanceof BombProp)) {
            return;
        }
        for (AbstractEnemy enemyAircraft : enemiesBeforeProp) {
            if (enemyAircraft.notValid()) {
                score += enemyAircraft.getScore();
            }
        }
    }

    /**
     * 后处理：
     * 1. 删除无效的子弹
     * 2. 删除无效的敌机
     * 3. 删除无效的道具
     */
    private void postProcessAction() {
        enemyBullets.removeIf(AbstractFlyingObject::notValid);
        heroBullets.removeIf(AbstractFlyingObject::notValid);
        enemyAircrafts.removeIf(AbstractFlyingObject::notValid);
        props.removeIf(AbstractFlyingObject::notValid);
    }
    
    /**
     * 生成道具（使用简单工厂模式）
     * 根据敌机类型确定可掉落的道具范围，随机生成一种道具
     * @param enemy 被击毁的敌机
     */
    private void generateProp(AbstractAircraft enemy) {
        // 根据敌机类型确定可掉落的道具种类
        PropFactory.PropType[] availableTypes;

        if (enemy instanceof ElitePlusEnemy) {
            // 精锐敌机：可掉落4种道具（不含冰冻）
            availableTypes = new PropFactory.PropType[]{
                    PropFactory.PropType.BLOOD,
                    PropFactory.PropType.FIRE,
                    PropFactory.PropType.FIRE_PLUS,
                    PropFactory.PropType.BOMB
            };
        } else if (enemy instanceof EliteProEnemy || enemy instanceof BossEnemy) {
            // 王牌敌机、Boss敌机：可掉落全部5种道具
            availableTypes = PropFactory.PropType.values();
        } else {
            // 精英敌机：掉落3种基础道具
            availableTypes = new PropFactory.PropType[]{
                    PropFactory.PropType.BLOOD,
                    PropFactory.PropType.FIRE,
                    PropFactory.PropType.FIRE_PLUS
            };
        }

        // 随机选择一种道具，使用简单工厂创建
        int index = (int) (Math.random() * availableTypes.length);
        AbstractProp prop = PropFactory.createProp(
                availableTypes[index], enemy.getLocationX(), enemy.getLocationY()
        );
        props.add(prop);
    }
    
    /**
     * 应用道具效果
     * @param prop 被拾取的道具
     */
    private void applyPropEffect(AbstractProp prop) {
        if (prop instanceof BloodProp) {
            // 加血道具：恢复生命值
            BloodProp bloodProp = (BloodProp) prop;
            int currentHp = heroAircraft.getHp();
            int maxHp = 100; // 英雄机最大生命值
            int healAmount = bloodProp.getHealAmount();

            // 恢复生命值，但不超过最大值
            int newHp = Math.min(currentHp + healAmount, maxHp);
            heroAircraft.decreaseHp(currentHp - newHp); // 使用负数来恢复生命值

            System.out.println("加血道具生效：恢复" + healAmount + "点生命值");

        } else if (prop instanceof FireProp) {
            // 火力道具：切换英雄机弹道为散射
            System.out.println("FireSupply active!");
            startFireEffect(new SpreadShootStrategy(), prop.getEffectDuration());

        } else if (prop instanceof FirePlusProp) {
            // 超级火力道具：切换英雄机弹道为环射
            System.out.println("FirePlusSupply active!");
            startFireEffect(new CircleShootStrategy(), prop.getEffectDuration());

        } else if (prop instanceof BombProp) {
            // 炸弹道具：清除所有敌机和敌机子弹
            System.out.println("BombSupply active!");
            audioManager.playBombExplosion();

        } else if (prop instanceof FreezeProp) {
            // 冰冻道具：冻结敌机
            System.out.println("FreezeSupply active!");
        }
    }

    private void startFireEffect(ShootStrategy strategy, int effectDuration) {
        int version = fireEffectVersion.incrementAndGet();
        heroAircraft.setShootStrategy(strategy);
        long durationMillis = Math.max(1, effectDuration) * (long) timeInterval;
        Thread task = new Thread(
                new FirePowerTask(heroAircraft, fireEffectVersion, version, durationMillis),
                "fire-power-task");
        task.setDaemon(true);
        task.start();
    }

    /**
     * 检查游戏是否结束，若结束：关闭线程池
     */
    private void checkResultAction(){
        // 游戏结束检查英雄机是否存活
        if (heroAircraft.getHp() <= 0 && !gameOverFlag) {
            gameOverFlag = true;
            System.out.println("Game Over!");
            heroAircraft.setShootStrategy(new DirectShootStrategy());
            audioManager.stopAll();
            audioManager.playGameOver();
            showScoreBoard();
            // 延迟取消定时器，避免立即停止导致异常
            TimerTask stopTask = new TimerTask() {
                @Override
                public void run() {
                    timer.cancel();
                }
            };
            Timer stopTimer = new Timer("stop-timer", true);
            stopTimer.schedule(stopTask, 100); // 延迟100ms停止
        }
    };

    private void showScoreBoard() {
        SwingUtilities.invokeLater(() -> new ScoreBoardFrame(difficulty, score).setVisible(true));
    }

    //***********************
    //      Paint 各部分
    //***********************
    /**
     * 重写 paint方法
     * 通过重复调用paint方法，实现游戏动画
     */
    @Override
    public void paint(Graphics g) {
        super.paint(g);

        // 绘制背景,图片滚动
        g.drawImage(backgroundImage, 0, this.backGroundTop - Main.WINDOW_HEIGHT, null);
        g.drawImage(backgroundImage, 0, this.backGroundTop, null);
        this.backGroundTop += 1;
        if (this.backGroundTop == Main.WINDOW_HEIGHT) {
            this.backGroundTop = 0;
        }

        // 先绘制子弹，后绘制飞机
        // 这样子弹显示在飞机的下层
        paintImageWithPositionRevised(g, enemyBullets);
        paintImageWithPositionRevised(g, heroBullets);
        paintImageWithPositionRevised(g, enemyAircrafts);
        paintImageWithPositionRevised(g, props);

        g.drawImage(ImageManager.HERO_IMAGE, heroAircraft.getLocationX() - ImageManager.HERO_IMAGE.getWidth() / 2,
                heroAircraft.getLocationY() - ImageManager.HERO_IMAGE.getHeight() / 2, null);

        //绘制得分和生命值
        paintScoreAndLife(g);

    }

    private void paintImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects) {
        if (objects.isEmpty()) {
            return;
        }

        for (AbstractFlyingObject object : objects) {
            BufferedImage image = object.getImage();
            assert image != null : objects.getClass().getName() + " has no image! ";
            g.drawImage(image, object.getLocationX() - image.getWidth() / 2,
                    object.getLocationY() - image.getHeight() / 2, null);
        }
    }

    private void paintScoreAndLife(Graphics g) {
        int x = 10;
        int y = 25;
        g.setColor(Color.RED);
        g.setFont(new Font("SansSerif", Font.BOLD, 22));
        g.drawString("SCORE: " + this.score, x, y);
        y = y + 20;
        g.drawString("LIFE: " + this.heroAircraft.getHp(), x, y);
    }

}
